--- a/app/views/infractions/_filter.html.erb
+++ b/app/views/infractions/_filter.html.erb
@@ -2,20 +2,20 @@
   <p id="title">Filter infractions by:</p>
   <%= form_tag(infractions_path, :method => :get) do %>
     <div id="field">
-      Reporter: <%= teams_select(:infraction) %>
+      Reporter: <%= teams_select(:infraction, :team_id, { :include_blank => true }) %>
     </div>
     <div id="field">
-      Offender: <%= teams_select(:infraction, :offender_id) %>
+      Offender: <%= teams_select(:infraction, :offender_id, { :include_blank => true }) %>
     </div>
     <div id="field">
-      Infraction type: <%= infraction_types_select %>
+      Infraction type: <%= infraction_types_select(:infraction, :infraction_type_id, { :include_blank => true }) %>
     </div>
     <div id="field">
-      Status: <%= statuses_select(:infraction) %>
+      Status: <%= statuses_select(:infraction, :status_id, { :include_blank => true }) %>
     </div>
     <div id="submit">
       <%= submit_tag 'Filter' %> or
-      <%= submit_tag 'Show all', :onclick => 'clearForm(this.form);' %>
+      <%= link_to 'Show all', infractions_path %>
     </div>
   <% end %>
 </div>
