--- a/app/views/player_mailer/witness_notification.html.erb
+++ b/app/views/player_mailer/witness_notification.html.erb
@@ -4,12 +4,12 @@
 
 <% if @action == :added %>
   <p>
-    You can either <%= link_to 'accept', accept_infraction_witness_path(@infraction, @witness, { :only_path => false }) %> or 
-    <%= link_to 'reject', reject_infraction_witness_path(@infraction, @witness, { :only_path => false }) %>
+    You can either <%= link_to 'accept', accept_infraction_witness_path(@infraction, @witness, options_for_mail_link) %> or 
+    <%= link_to 'reject', reject_infraction_witness_path(@infraction, @witness, options_for_mail_link) %>
     your role as a witness of this infraction.
   </p>
 <% end %>
 
-<p>Click <%= link_to 'here', infraction_path(@infraction, { :only_path => false }) %> if you want to see more details about the infraction.</p>
+<p>Click <%= link_to 'here', infraction_path(@infraction, options_for_mail_link) %> if you want to see more details about the infraction.</p>
 
 <%= render 'footer' %>
