Parte del arreglo del issue #30: agregando links en todos los lugares donde mostramos nombres de equipos, jugadores, etc. a su pagina correspondiente

--- a/app/views/comments/_comment_header.erb
+++ b/app/views/comments/_comment_header.erb
@@ -1,3 +1,3 @@
 <% comment ||= @comment %>
-<%= image_tag(comment.player.avatar.url(:thumb),:style => "height:36px;vertical-align:middle") %>
-<b><%= comment.player_name %></b> (<%= format_date(comment.created_at) %>)
+<%= post_player_image(comment) %>
+<b><%= post_player_name(comment) %></b> (<%= format_date(comment.created_at) %>)
