--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -10,7 +10,7 @@
 
       <p>
         <b>Author:</b>
-        <%= @suggestion.player_name %>
+        <%= post_player_name(@suggestion) %>
       </p>
 
       <p>
