--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -11,7 +11,7 @@
 <% @comments.each do |comment| %>
   <tr>
     <td><%= format_date(comment.created_at) %></td>
-    <td><%= comment.player_name %></td>
+    <td><%= post_player_name(comment) %></td>
     <td><%= comment.comment_type %></td>
     <td><%= comment.description %></td>
     <td><%= link_to 'Show', comment %></td>
