--- a/app/views/witnesses/_witness_header.erb
+++ b/app/views/witnesses/_witness_header.erb
@@ -1,3 +1,3 @@
 <% witness ||= @witness %>
 <%= image_tag(witness.player.avatar.url(:thumb), :style => 'height:36px; vertical-align:middle') %>
-<%= witness.player.full_name %>
+<%= link_to witness.player.full_name, witness.player %>
