Haciendo merge con el branch vjunio: incluye parte del arreglo del issue #30 y el arreglo del issue #31

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -23,7 +23,7 @@
   <% if can? :manage, @player %>
     <div class="field">
       <%= f.label :team_id %><br />
-      <%= teams_select(:player) %>
+      <%= admin_teams_select(:player) %>
     </div>
     <div class="field">
       <%= f.label :is_admin %><br />
