--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
     <title>Greenathon</title>
       <%= stylesheet_link_tag :all %>
       <%= javascript_include_tag :defaults %>
+      <%= javascript_include_tag 'green_tooltip' %>
       <%= stylesheet_link_tag "green" , :media => "all" %>
+      <%= stylesheet_link_tag "green_tooltip" , :media => "all" %>
       <%= csrf_meta_tag %>
   </head>
 
@@ -28,10 +30,8 @@
             <%= f.check_box :remember_me %>
             <%= f.label :remember_me %><br />
             <%= f.submit 'Sign in' %>
-            <%= link_to "Forgot your password?", new_password_path('user') %>
           <% end %>
           </p>
-          <p>Not a member? <%= link_to 'Create an account', new_user_registration_path %></p>
         <% end %>
       </div>
       <div id="main_menu">
@@ -53,7 +53,6 @@
             </li>
           <% else %>
             <li><%= link_to 'Login', new_user_session_path %></li>
-            <li><%= link_to 'Signup', new_user_registration_path %></li>
           <% end %>
         </ul>
         <h3>Avantica Green</h3>
