Actualizando el Gemfile para usar las versiones mas recientes de las gemas y arreglando un par de errores como parte del merge del branch vjunio

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -23,7 +23,7 @@
   <% if can? :manage, @player %>
     <div class="field">
       <%= f.label :team_id %><br />
-      <%= admin_teams_select(:player) %>
+      <%= teams_select(:player, :team_id, { :admin => (user_signed_in? && current_player.is_admin?) }) %>
     </div>
     <div class="field">
       <%= f.label :is_admin %><br />
