--- a/app/views/players/_toolbox.html.erb
+++ b/app/views/players/_toolbox.html.erb
@@ -7,13 +7,13 @@
       <h4>Import players:</h4>
       <ul>
         <li>
-          <%= form_tag :action => 'import_players' do %>
+          <%= form_tag(import_players_path) do %>
             <%= submit_tag('Import all players', :confirm => 'Are you sure you want to import all players?') %>
           <% end %>
         </li>
         <br/>
         <li> 
-          <%= form_tag :action => 'import_some_players' do %>
+          <%= form_tag(import_players_path) do %>
             <%= label_tag('Import ') %>
             <%= text_field_tag(:number_of_players, 10, :size => 1) %>
             <%= label_tag(' players') %>
