--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -100,6 +100,7 @@
 /*comments*/
 .comment_container {
   float: left;
+  clear: left;
   width: 500px;
   margin-right: 10px;
   margin-left: 40px;
