--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Greenathon</title>
+      <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
       <%= stylesheet_link_tag :all %>
       <%= javascript_include_tag :defaults %>
       <%= javascript_include_tag 'green_tooltip' %>
@@ -15,11 +16,29 @@
       <div id="logo">
         <%= image_tag('avantica_green_small.png') %>
       </div>
+      <div id="secondary_menu">
+        <b>Quick links</b>
+        <br/>
+        <% if user_signed_in? && current_user.player %>
+          &nbsp;<%= link_to('Create infraction', new_infraction_path) %>
+          <br/>
+          &nbsp;<%= link_to 'Make a suggestion', new_suggestion_path %>
+        <% else %>
+          <%= link_to 'Login', new_user_session_path %>
+        <% end %>
+        <br/>
+        <br/>
+        <b>Avantica Green</b>
+        <br/>
+        &nbsp;<%= link_to 'Article 1', root_path %>
+        <br/>
+        &nbsp;<%= link_to 'Article 2', root_path %>  
+      </div>
       <div id="login_info">
         <% if user_signed_in? && current_user.player %>
           <p>Signed in as <%= current_user.player.full_name %><%= current_player.is_admin ? ' (administrator)' : ''%></p>
           <p>
-            <%= link_to 'Manage your account', current_player %> |
+            <%= link_to 'Manage your account', edit_player_path(current_user.player) %> |
             <%= link_to 'Logout', destroy_user_session_path %>
           </p>
         <% else %>
@@ -39,29 +58,7 @@
       </div>
     </div>
     <div id="main_page">
-      <div id="secondary_menu">
-        <h3>Quick links</h3>
-        <ul>
-          <% if user_signed_in? && current_user.player %>
-            <li>
-              <%= image_tag('infraction_32.png') %>
-              <%= link_to('Create infraction', new_infraction_path) %>
-            </li>
-            <li>
-              <%= image_tag('light_32.png') %>
-              <%= link_to 'Make a suggestion', new_suggestion_path %>
-            </li>
-          <% else %>
-            <li><%= link_to 'Login', new_user_session_path %></li>
-          <% end %>
-        </ul>
-        <h3>Avantica Green</h3>
-        <ul>
-          <li><%= link_to 'Article 1', root_path %></li>
-          <li><%= link_to 'Article 2', root_path %></li>
-        </ul>
-      </div>
-      <div id="content">
+            <div id="content">
         <%= raw(display_flash_messages) %>
         <%= yield :layout %>
       </div>
