--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,9 +1,13 @@
-body { background-color: #fff; color: #333; }
+body { background-color: #fff; color: #333; margin: 0px; }
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Comfortaa', sans-serif;
   font-size:   13px;
   line-height: 18px;
+}
+
+table th {
+  text-align: left;
 }
 
 pre {
@@ -12,7 +16,7 @@ pre {
   font-size: 11px;
 }
 
-a { color: #000; }
+a { color: #000; padding: 5px;}
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
 
