--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -61,9 +61,10 @@
 }
 
 #secondary_menu {
-  float: left;
+  float: right;
   background-color: #CCFF99;
-  width: 20%;
+  width: 15%;
+  height: 150px;
   padding-left: 5px;
 }
 #secondary_menu ul {
@@ -74,7 +75,6 @@
   padding: 5px;
   margin: 5px;
   color: black;
-  font-weight: bold;
   cursor: pointer;
 }
 
