--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -1,5 +1,5 @@
 #header {
-  background-color: #5FB404;
+  background-color: #B8CB99;
   height: 150px;
   width: 100%;
   float: left;
@@ -48,6 +48,7 @@
   padding: 5px 15px;
   margin: 5px;
   margin-bottom: 0;
+  background-color: #e3efd0;
   font-weight: bold;
   cursor: pointer;
 }
@@ -62,12 +63,12 @@
 #content {
   float: left;
   padding-left: 15px;
-  width: 75%;
+  width: 70%;
 }
 
 #secondary_menu {
   float: right;
-  background-color: #CCFF99;
+  background-color: #e3efd0;
   width: 15%;
   height: 150px;
   padding-left: 5px;
@@ -134,79 +135,29 @@
 
 /*details box*/
 
-
 .detail_box {
-  width: 25em;
+  width: 200px;
   position:absolute;
-  top:155px;
-  right:0%;
+  top:200px;
+  right:1%;
+  background-color: #e3efd0;
+  -moz-border-radius-topleft: 15px;
+  -webkit-border-top-left-radius: 15px;
+  -moz-border-radius-bottomright: 15px;
+  -webkit-border-bottom-right-radius: 15px;
+  border: 4px solid #B8CB99;
+  padding: 10px;
 }
 
-.box {
-  width: 25em;
-  margin: 5px auto 5px auto;
-  font-size: 12px;
-  right:0%;
-}
 
-.topleft {
-  display: block;
-  background: url("../images/box/bg3.png") top left no-repeat white;
-  padding: 1.0em 0em 0em 1.0em;
-}
-
-.topright {
-  display: block;
-  background: url("../images/box/bg3.png") top right no-repeat white;
-  padding: 1.0em;
-  margin: -1.0em 0 0 1.0em;
-}
-
-.bottomleft {
-  display: block;
-  height: 45px;
-  margin-top: -1.0em;
-  background: url("../images/box/bg3.png") bottom left no-repeat white;
-}
-
-.bottomright {
-  display: block;
-  background: url("../images/box/bg3.png") bottom right no-repeat white;
-  height: 45px;
-  margin-left: 3.0em;
-}
 
 /*main box*/
 .main_box {
-  width: 60em;
-  margin: 0 0 0 0;
-  font-size: 12px;
+  background-color: #e3efd0;
+  -moz-border-radius-topleft: 15px;
+  -webkit-border-top-left-radius: 15px;
+  -moz-border-radius-bottomright: 15px;
+  -webkit-border-bottom-right-radius: 15px;
+  border: 4px solid #B8CB99;
+  padding: 10px;
 }
-
-.main_box_topleft {
-  display: block;
-  background: url("../images/box/bg3.png") top left no-repeat white;
-  padding: 2.0em 0em 0em 2.0em;
-}
-
-.main_box_topright {
-  display: block;
-  background: url("../images/box/bg3.png") top right no-repeat white;
-  padding: 2.0em;
-  margin: -2.0em 0 0 2.0em;
-}
-
-.main_box_bottomleft {
-  display: block;
-  height: 45px;
-  margin-top: -2.0em;
-  background: url("../images/box/bg3.png") bottom left no-repeat white;
-}
-
-.main_box_bottomright {
-  display: block;
-  background: url("../images/box/bg3.png") bottom right no-repeat white;
-  height: 45px;
-  margin-left: 3.0em;
-}
-
