--- a/app/views/infractions/show.html.erb
+++ b/app/views/infractions/show.html.erb
@@ -4,7 +4,7 @@
   <div class="main_box_topright">
     <div>
       <% if @infraction.status == Status.pending %>
-      <p id="error">
+      <p id="warning">
         This infraction has not been approved because there is no evidence or no witnesses have confirmed their role.
       </p>
       <% end %>
