Arreglo de varias pulgas: 36, 35 y 34 funcionalidad nueva: Standings ordena los equipos en orden descendente: el que tiene menor puntaje (va ganando) se muestra de primero

--- a/app/views/infractions/_form.html.erb
+++ b/app/views/infractions/_form.html.erb
@@ -20,7 +20,8 @@
       <%= f.text_area :description %>
     </div>
   <% end %>
-  <% if action_name == 'new' || can?(:manage, @infraction) || 
+
+  <% if ['new','create'].include?(action_name) || can?(:manage, @infraction) || 
       (@infraction.status == Status.pending && action_name == 'edit') %>
     <div class="field">
       <%= f.label :offender_id %><br />
