Setting Up New Server / Rails 4 * Sensitive data remains in local files. Not checking them for security reasons ( Repository is public)
- Updated Rails to Rails 4
- Updateds for devise gem
- Fixed problems with migrations
- Updating Gemfile and GEMS versions
---
- Gitignore working properly
---
- Move all assets to respective assets folder Rails 3 and newer
- Changed assets references
---
- Making fields accessible at model level
- Cleaning up dir
---
- Fixing:
  - Deprecation messages
  - Performace Standings
  - Accesible fields
---
  - LDAP text error fixed
  - Rememberable error fixed
---
- First CR applied

--- a/app/assets/stylesheets/green.css
+++ b/app/assets/stylesheets/green.css
@@ -1,3 +1,5 @@
+/* Green.css File */
+/******************/
 #header {
   background-color: #B8CB99;
   height: 182px;
@@ -118,7 +120,7 @@
 .comment {
    width: 500px;
    min-height: 50px;
-   background-image: url(../images/comment/comment_middle.gif);
+   background-image: url(comment/comment_middle.gif);
    background-repeat: repeat-y;
    margin: 0px 0px 0px 0px;
    padding: 10px 0px 0px 0px;
@@ -130,7 +132,7 @@
 
 .comment_footer {
    width: 500px;
-   background-image: url(../images/comment/comment_finish.gif);
+   background-image: url(comment/comment_finish.gif);
    background-position: 0% 100%;
    background-repeat: no-repeat;
    margin: 0px 0px 0px 0px;
