--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,8 @@
   <head>
     <title>Greenathon</title>
       <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
-      <%= stylesheet_link_tag :all %>
-      <%= javascript_include_tag :defaults %>
-      <%= javascript_include_tag 'green_tooltip' %>
-      <%= stylesheet_link_tag "green" , :media => "all" %>
-      <%= stylesheet_link_tag "green_tooltip" , :media => "all" %>
+      <%= javascript_include_tag 'application' %>      
+      <%= stylesheet_link_tag 'application' , :media => "all" %>
       <%= csrf_meta_tag %>
   </head>
 
