--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -1,3 +1,6 @@
+/* Scaffold Stylesheet */
+/***********************/
+
 body { background-color: #fff; color: #333; margin: 0px; }
 
 body, p, ol, ul, td {
