BUG: Missleading button when creating witnesses in side panel - Changed JS to hide & show button - Alignment of dropdown select

--- a/app/views/witnesses/_witnesses.html.erb
+++ b/app/views/witnesses/_witnesses.html.erb
@@ -11,7 +11,7 @@
       <% end %>
     </div>
     <% if can?(:create, Witness.new(:infraction => @infraction)) %>
-      <br /><%= link_to 'Add Witness', new_witness_path, :remote => true %>
+      <div id='add_witness_event'><br /><%= link_to 'Add Witness', new_witness_path, :remote => true %></div>
     <% end %>
   </div>
   </div>
