--- a/app/views/witnesses/create.js.erb
+++ b/app/views/witnesses/create.js.erb
@@ -2,4 +2,5 @@ $('div#new_witness').remove();
 <% if @witnesses_size == 0 %>
   $('#witnesses').empty();
 <% end %>
+$('div#add_witness_event').show();
 $('#witnesses').append('<%= escape_javascript render(@witness) %>');
