--- a/app/views/witnesses/new.js.erb
+++ b/app/views/witnesses/new.js.erb
@@ -1,2 +1,3 @@
+$('div#add_witness_event').hide();
 $('div#new_witness').remove();
 $('#witnesses').append('<%= escape_javascript render('witnesses/form') %>').fadeIn();
