FEATURE: Pagination to Players page - Added pagination to players page - Not displayed un teams details page

--- a/app/assets/stylesheets/green.css
+++ b/app/assets/stylesheets/green.css
@@ -219,7 +219,12 @@
   *:first-child + html .pagination {
     overflow: hidden;
 }
+/*Players pages*/
 
+.players .pagination .page_info {
+  float: left;  }
+.players .pagination .pagination {
+  float: right; }
 
 .centered{
  text-align: center;
