--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
       <%= csrf_meta_tag %>
   </head>
 
-  <body>
+  <body class='<%= params[:controller]%>'>
     <div id="header">
       <div id="logo">
         <%= image_tag('avantica_green_small.png') %>
