--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -22,6 +22,12 @@ pre {
 a { color: #666; padding: 5px;}
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#666; }
+a.image_link:hover {background-color:transparent;}
+a.image_link img:hover {
+  -moz-box-shadow:    0px 0px 15px 3px #FFFFF5;
+  -webkit-box-shadow: 0px 0px 15px 3px #FFFFF5;
+  box-shadow:         0px 0px 15px 3px #FFFFF5;
+}
 
 a img, a:hover img { border-width: 0; }
 
