--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -14,6 +14,7 @@
       <p>
         <b>Type:</b>
         <%= @suggestion.suggestion_type %>
+        <%= type_avatar(@suggestion)%>
       </p>
 
       <p>
