--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,9 @@
         <br/>
         <b>Avantica Green</b>
         <br/>
-        &nbsp;<%= link_to '- Calculadora huella de desechos', 'http://www.nacion.com/Generales/Subsitios/AldeaGlobal/2013/Huella-de-desechos.aspx', :target => '_blank' %>
+        &nbsp;<%= link_to '- Calculadora huella de desechos', 'http://www.carbonfootprint.com/calculator.aspx', :target => '_blank' %>
         <br/>
-        &nbsp;<%= link_to "- Guia nacional de manejo de residuos (19 MB)", 'http://www.diayjacinto.com/descargables/GNDMR2012.pdf', :target => '_blank' %>  
+        &nbsp;<%= link_to "- Guia nacional de manejo de residuos", asset_path('guia_desechos.pdf'), :target => '_blank' %>
       </div>
       <div id="login_info">
         <% if user_signed_in? && current_user.player %>
