WIP:Enhancement: Side section too long - Updated Jquery references - Cleanup Jquery files - Added accordion for long side bar

--- a/app/views/infractions/_list.html.erb
+++ b/app/views/infractions/_list.html.erb
@@ -3,7 +3,9 @@
     <div class="topleft">
     <div class="topright">
       <div>
-        <h4><%= title %>:</h4>
+        <%unless title.blank?%>
+         <h4><%= title %>:</h4>
+        <%end%>
         <% infractions.each_index do |index| %>
           <% infraction = infractions[index] %>
           <% witness = witnesses[index] unless witnesses.blank? %>
